--- a/package.json
+++ b/package.json
@@ -1,8 +1,13 @@
 {
   "name": "mntk",
-  "version": "0.1.4",
+  "version": "0.1.5",
   "description": "Mr Null's Toolkit",
   "main": "mntk.min.js",
   "author": "MrNull.io",
-  "license": "ISC"
-}
+  "license": "ISC",
+  "homepage": "https://github.com/null8080/mntk#readme",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/null8080/mntk.git"
+  }
+}}
